<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.fragments.DownloadFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/download_url_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/tiktok_link"
            android:imeOptions="actionSend"
            android:theme="@style/Theme.TiktokDownloaderApp.TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_input_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:singleLine="true"
                android:textColor="@color/gray_dark" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />

        <Button
            android:id="@+id/btn_show_info"
            style="?attr/materialButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/purple"
            android:enabled="true"
            android:text="@string/show_information"
            android:textColor="@color/white" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/gray_light"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_video_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/ic_download" />

                <LinearLayout
                    android:id="@+id/ll_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/tv_hashtag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="#tiktoktrending #xuhuong"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:weightSum="6">

                        <TextView
                            android:id="@+id/tv_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="4.5"
                            android:drawablePadding="4dp"
                            android:maxLines="1"
                            android:text="Title"
                            android:textColor="@color/gray_dark"
                            android:textSize="18sp"
                            app:drawableStartCompat="@drawable/ic_outline_title_24" />

                        <TextView
                            android:id="@+id/tv_duration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:drawablePadding="4dp"
                            android:text="24 sec"
                            android:textColor="@color/gray_dark"
                            android:textSize="18sp"
                            app:drawableStartCompat="@drawable/ic_baseline_duration_24" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:weightSum="8">

                        <TextView
                            android:id="@+id/tv_view_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:drawablePadding="4dp"
                            android:text="75.6K"
                            android:textColor="@color/gray_dark"
                            android:textSize="16sp"
                            app:drawableStartCompat="@drawable/ic_outline_remove_red_eye_18" />

                        <TextView
                            android:id="@+id/tv_comment_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:drawablePadding="4dp"
                            android:text="210"
                            android:textColor="@color/gray_dark"
                            android:textSize="16sp"
                            app:drawableStartCompat="@drawable/ic_outline_comment_18" />

                        <TextView
                            android:id="@+id/tv_like_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:drawablePadding="4dp"
                            android:text="4.5K"
                            android:textColor="@color/gray_dark"
                            android:textSize="16sp"
                            app:drawableStartCompat="@drawable/ic_outline_thumb_up_18" />

                        <TextView
                            android:id="@+id/tv_share_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:drawablePadding="4dp"
                            android:text="195"
                            android:textColor="@color/gray_dark"
                            android:textSize="16sp"
                            app:drawableStartCompat="@drawable/ic_outline_share_18" />
                    </LinearLayout>

                    <com.google.android.gms.ads.AdView
                        android:id="@+id/adView_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:visibility="gone"
                        ads:adSize="BANNER"
                        ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />

                    <Button
                        android:id="@+id/btn_download_mp3"
                        style="?attr/materialButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:backgroundTint="@color/purple"
                        android:text="@string/download_mp3"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/btn_download_video"
                        style="?attr/materialButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:backgroundTint="@color/purple"
                        android:text="@string/download_without_watermark"
                        android:textColor="@color/white" />

                    <com.google.android.gms.ads.AdView
                        android:id="@+id/adView_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:visibility="gone"
                        ads:adSize="BANNER"
                        ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />

                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>


</ScrollView>